--- a/web/index.html
+++ b/web/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Screenshot Comparison</title>
+  <title>ImageDiff</title>
 
 </head>
 
 <body>
   <div id="root"></div>
+  <div id="portals"></div>
   <script src="./index.js"></script>
 </body>
 
